try to fix pb with dropdown menu when collapsed can't scroll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,7 +146,7 @@ p {
 
 .scrollable-menu {
     height: auto;
-    max-height: 90vh;
+    max-height: 50vh;
     overflow-x: hidden;
     overflow-y: scroll;
 }
